Rename locations => location
